some responsive changes

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
             </ul>
             <div class="d-block d-lg-flex right-side">
                 <a href="login.html" class="main-btn d-block d-lg-inline mb-3 mb-lg-0"><i class="fa-solid fa-right-to-bracket me-2"></i>Login</a>
-                <a href="dashboard/add-property.html" class="main-btn d-block d-lg-inline"><i class="fa-solid fa-house-chimney me-2"></i> Add Listing</a>
+                 
             </div>
           </div>
         </div>
@@ -50,7 +50,7 @@
 </header>
 <!-- =====================hero-section===================== -->
 <section class="hero-section position-relative">
-    <img src="assets/images/landing-bg.webp" width="100%" alt="">
+    <img src="assets/images/landing-bg.webp" class="d-none d-lg-block" width="100%" alt="">
     <div class="searchbar">
         <div class="container">
             <div class="search-sec">
@@ -331,10 +331,10 @@
       <div class="d-md-flex justify-content-between align-items-end">
         <div>
           <h2 class="fw-bold">Featured Properties</h2>
-          <p class="fs-6 m-0">Aliquam lacinia diam quis lacus euismod</p>
+          <p class="fs-6 mb-3 mb-md-0">Aliquam lacinia diam quis lacus euismod</p>
         </div>
       <div>
-        <a href="listing.html" class="float-lg-end d-inline-block ms-0">View All <i class="fa-solid fa-arrow-up-long"></i></a>
+        <a href="listing.html" class="float-lg-end d-inline-block ms-0 small">View All <i class="fa-solid fa-arrow-up-long"></i></a>
       </div>
     </div>
     </div>
@@ -525,13 +525,13 @@
 <section class="heading margin mb-4">
   <div class="container">
     <div class="row">
-      <div class="d-flex justify-content-between align-items-end">
+      <div class="d-md-flex justify-content-between align-items-end">
         <div>
           <h2 class="fw-bold">Meet Properties Advisors</h2>
-          <p class="fs-6 m-0">Aliquam lacinia diam quis lacus euismod</p>
+          <p class="fs-6 mb-4 mb-md-0">Aliquam lacinia diam quis lacus euismod</p>
         </div>
       <div>
-        <a href="listing.html" class="float-end">View All <i class="fa-solid fa-arrow-up-long"></i></a>
+        <a href="listing.html" class="float-md-end d-inline-block ms-0 small">View All <i class="fa-solid fa-arrow-up-long"></i></a>
       </div>
     </div>
     </div>
@@ -650,7 +650,7 @@
           <p class="m-0 text-white fw-bold">We help you make the dream of new house a reality</p>
         </div>
         <div>
-          <a href="listing.html" class="secondary-btn float-end">Explore Properties <i class="fa-solid fa-arrow-up-long"></i></a>
+          <a href="listing.html" class="secondary-btn float-md-end ms-0 d-inline-block mt-4 mt-md-0">Explore Properties <i class="fa-solid fa-arrow-up-long"></i></a>
         </div>
       </div>
     </div>
